# WeKit2

./: AGENTS.md  README.md  settings.gradle.kts  x
.github/workflows/: ci.yml
app/: build.gradle.kts
app/schemas/dev.ujhhgtg.wekit.agent.data.WeAgentDatabase/: 1.json  2.json  3.json  4.json  5.json
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/ujhhgtg/wekit/activity/agent/: WeAgentSettingsActivity.kt
app/src/main/java/dev/ujhhgtg/wekit/activity/settings/: HomePager.kt  LogsPager.kt  SettingsActivity.kt  SettingsPager.kt
app/src/main/java/dev/ujhhgtg/wekit/agent/data/: WeAgentConverters.kt  WeAgentDatabase.kt  WeAgentRepository.kt  WeAgentSettings.kt
app/src/main/java/dev/ujhhgtg/wekit/agent/engine/: AgentEvent.kt  AgentSessionEngine.kt  ApprovalGateway.kt  PromptComposer.kt  ToolDiscovery.kt
app/src/main/java/dev/ujhhgtg/wekit/agent/jvm/: JvmEvalEngine.kt  JvmReflector.kt  JvmValueBridge.kt
app/src/main/java/dev/ujhhgtg/wekit/constants/: WeChatVersions.kt
app/src/main/java/dev/ujhhgtg/wekit/dexkit/: DexMethodDescriptor.kt
app/src/main/java/dev/ujhhgtg/wekit/preferences/: MmkvPrefsImpl.kt
app/src/main/java/dev/ujhhgtg/wekit/utils/: DebugUtils.kt  HostInfo.kt  KillHostUtils.kt  MessageTextUtils.kt  SignatureVerifier.kt  TargetProcesses.kt  TelegramStickerConverter.kt
app/src/main/keepRules/: rules.keep
app/src/main/rust/wekit-native/: Cargo.toml  build.rs
app/src/main/rust/wekit-native/src/: lib.rs  logging.rs  telegram_sticker.rs
buildSrc/src/main/kotlin/: GenerateMethodHashesTask.kt
gradle/: libs.versions.toml
xtask/src/: main.rs
(+277 files in other folders)
