[package]
name = "wekit-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "wekit_native"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.22", default-features = false }
libc = "0.2"
markdown = "1"
silk-v3-sys = { git = "https://github.com/Ujhhgtg/silk-v3-sys.git" }
symphonia = { version = "0.6", features = [
    "mp3",
    "aac",
    "isomp4",
    "pcm",
], default-features = false }
mp3lame-encoder = "0.2"
anyhow = "1"
sha2 = { version = "0.11", default-features = false }

[build-dependencies]
bindgen = "0.72"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
