[package]
name = "wekit-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "wekit_native"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.22", default-features = false }
libc = "0.2"
markdown = "1"
silk-v3-sys = { git = "https://github.com/Ujhhgtg/silk-v3-sys.git" }
symphonia = { version = "0.6", features = ["aac", "flac", "isomp4", "mkv", "mp3", "ogg", "opt-simd", "pcm", "wav"], default-features = false }
mp3lame-encoder = "0.2"
anyhow = "1"
sha2 = { version = "0.11", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
rasterlottie = { version = "0.2", default-features = false, features = ["images", "text"] }
gif = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
bindgen = "0.72"
